@@ -11,6 +11,7 @@
 - added a feature that kills worker flow instances when the main process is terminated
 - extended `Total.readfile(path, [type])` by adding a new type `datauri`
 - fixed returing collections from the `HTMLParser.find()` method
+- added `extend:String` option in `NEWACTION()` method
 
 ========================
 0.0.12
